--- a/src/style/login.scss
+++ b/src/style/login.scss
@@ -1,16 +1,89 @@
+@mixin breakpoint-standard($size) {
+  @if $size==1 {
+    @media only screen and (max-width: 479px) {
+      @content;
+    }
+  } @else if $size==2 {
+    @media only screen and (min-width: 480px) and (max-width: 575px) {
+      @content;
+    }
+  } @else if $size==3 {
+    @media only screen and (min-width: 576px) and (max-width: 767px) {
+      @content;
+    }
+  } @else if $size==4 {
+    @media only screen and (min-width: 768px) and (max-width: 991px) {
+      @content;
+    }
+  } @else if $size==5 {
+    @media only screen and (min-width: 992px) and (max-width: 1024px) {
+      @content;
+    }
+  } @else if $size==6 {
+    @media only screen and (min-width: 1025px) and (max-width: 1366px) {
+      @content;
+    }
+  } @else if $size==7 {
+    @media only screen and (max-width: 1440px) {
+      @content;
+    }
+  }
+}
+
+
 .login-page-container {
   // display: flex;
   // justify-content: center;
   width: 100%;
   align-items: center;
   background: #edf3fe;
-  height: 100vh;
+  height: 60vw;
+  padding: 2rem;
+  @include breakpoint-standard(7) {
+    height: auto;
+  }
+  @include breakpoint-standard(6) {
+    height: auto;
+  }
+  @include breakpoint-standard(5) {
+    height: auto;
+  }
+  @include breakpoint-standard(4) {
+    height: auto;
+  }
+  @include breakpoint-standard(3) {
+    height: auto;
+
+  }
+  @include breakpoint-standard(2) {
+    height: auto;
+  
+  }
+  @include breakpoint-standard(1) {
+    height: auto;
+  }
 }
 .login-content {
   display: flex;
   width: 100%;
   padding: 20px;
   align-items: center;
+  @include breakpoint-standard(4) {
+    padding: 10px;
+    
+  }
+  @include breakpoint-standard(3) {
+    padding: 10px;
+
+  }
+  @include breakpoint-standard(2) {
+    padding: 10px;
+  
+  }
+  @include breakpoint-standard(1) {
+    padding: 10px;
+    display: inline;
+  }
   
 }
 .login-logo-content {
@@ -19,19 +92,89 @@
   text-align: center;
   justify-content: center;
   align-items: center;
+  @include breakpoint-standard(7) {
+    width: 50%;
+    img{
+      width: 80%;
+    }
+  }
+  @include breakpoint-standard(6) {
+    width: 50%;
+    img{
+      width: 75%;
+    }
+  }
+  @include breakpoint-standard(5) {
+    width: 50%;
+    img{
+      width: 75%;
+    }
+  }
+  @include breakpoint-standard(4) {
+    width: 50%;
+    img{
+      width: 75%;
+    }
+  }
+  @include breakpoint-standard(3) {
+    width: 40%;
+    img{
+      width: 100%;
+    }
+  }
+  @include breakpoint-standard(2) {
+    width: 100%;
+    img{
+      width: 100%;
+    }
+  }
+  @include breakpoint-standard(1) {
+    width: 100%;
+    text-align: center;
+    img{
+      width: 80%;
+    }
+  }
 }
 
 .login-input-content {
   display: flex;
   width: 40%;
   justify-content:flex-start;
-
   .login-box {
     width: 65%;
     background-color: #fff;
     padding: 24px;
     border-radius: 8px;
     box-shadow: 0px 0px 6px #0000007a;
+    @include breakpoint-standard(7) {
+      width: 60%;
+      padding: 15px;
+    }
+    @include breakpoint-standard(6) {
+      width: 60%;
+      padding: 15px;
+    }
+    @include breakpoint-standard(5) {
+      width:80%;
+      padding: 15px;
+    }
+    @include breakpoint-standard(4) {
+      width: 80%;
+      padding: 10px;;
+    }
+    @include breakpoint-standard(3) {
+      width: 80%;
+      padding: 10px;;
+    }
+    @include breakpoint-standard(2) {
+      width: 80%;
+      padding: 10px;;
+    }
+    @include breakpoint-standard(1) {
+      width: 80%;
+      padding: 10px;;
+    }
   }
   .name-shop-text {
     font-size: 24px;
@@ -45,6 +188,37 @@
     font-weight: 900;
     padding: 10px;
     text-align: center;
+  }
+  @include breakpoint-standard(7) {
+    width: 50%;
+    justify-content: center;
+  }
+  @include breakpoint-standard(6) {
+    width: 50%;
+    justify-content: center;
+  }
+  @include breakpoint-standard(5) {
+    width: 50%;
+    justify-content: center;
+  }
+  @include breakpoint-standard(4) {
+    width: 60%;
+    justify-content: center;
+  }
+  @include breakpoint-standard(3) {
+    margin-top: 15px;
+    width: 100%;
+    justify-content: center;
+  }
+  @include breakpoint-standard(2) {
+    margin-top: 15px;
+    width: 100%;
+    justify-content: center;
+  }
+  @include breakpoint-standard(1) {
+    margin-top: 15px;
+    width: 100%;
+    justify-content: center;
   }
 }
 .input-form-container {
